--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ICalculator</title>
+    <title>Calculator</title>
 </head>
 
 <body>
-    <h2>Interactive Calculator</h2>
+    <h2>Javascript Calculator</h2>
     <input type="text" id="fn" placeholder="Enter first number">
     <select id="operation">
         <option value="+">+</option>
